--- a/config/cable.yml
+++ b/config/cable.yml
@@ -9,9 +9,6 @@ test:
   adapter: test
 
 production:
-  adapter: solid_cable
-  connects_to:
-    database:
-      writing: cable
-  polling_interval: 0.1.seconds
-  message_retention: 1.day
+  adapter: redis
+  url: redis://:your_password@redis-16793.c239.us-east-1-2.ec2.redns.redis-cloud.com:16793
+  channel_prefix: your_app_production
